Basic navigation menu to switch between activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:label="Eleos">
         </activity>
 
+        <activity
+            android:name=".activities.CreateTeamActivity"
+            android:label="Eleos">
+        </activity>
+
     </application>
 
 </manifest>
