--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +36,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".activities.RegistrationActivity" />
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.LoginActivity" />
 
         <activity
             android:name=".activities.CreateGameActivity"
