--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,25 +24,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.PlayerSearchActivity"
-            android:label="@string/app_name">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
         <activity android:name=".activities.RegistrationActivity" />
         <activity android:name=".activities.LoginActivity" />
         <activity
             android:name=".activities.CreateGameActivity"
-            android:label="Eleos"></activity>
+            android:label="Eleos" />
         <activity
             android:name=".activities.CreateTeamActivity"
-            android:label="Eleos"></activity>
+            android:label="Eleos" />
+        <activity
+            android:name=".activities.PlayerSearchActivity"
+            android:label="@string/title_activity_player_search"
+            android:theme="@style/AppTheme.Template.Base"></activity>
     </application>
 
 </manifest>
