Refactor views ids and packages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:label="@string/title_activity_player_search"
             android:theme="@style/AppTheme.Template.Base" />
         <activity
-            android:name=".activities.MyTeamActivity"
+            android:name=".activities.TeamSelectionActivity"
             android:label="@string/title_activity_my_team"
             />
     </application>
