--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".activities.TeamSelectionActivity"
             android:label="@string/title_activity_my_team"
             />
+        <activity
+            android:name=".activities.JoinGameANDViewGame"
+            android:label="JoinViewActivity"
+            />
     </application>
 
 </manifest>
