Add manager registration screen
Needed to enable venue managers to register and modify their venue info

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,10 @@
             android:name=".activities.GameInfoActivity"
             android:label="Game Info"
             />
-
+        <activity
+            android:name=".activities.ManagerRegistrationActivity"
+            android:label="Game Info"
+            />
     </application>
 
 </manifest>
