--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,7 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.8.2'
 
+    //google map
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
 
 }
