Add team edit through my team activity
Clicking on a team from the my team activity gives team info and an option to
edit and save.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,9 +49,17 @@
         <activity
             android:name=".activities.GameInfoActivity"
             android:label="Game Info" />
+
         <activity
             android:name=".activities.ManagerRegistrationActivity"
             android:label="Manager Registration" />
+         <activity
+            android:name=".activities.AdminTeams"
+            android:label="My Teams" />
+          <activity
+            android:name=".activities.TeamInfoActivity"
+            android:label="Team info" />
+
         <activity
             android:name=".activities.VenueInfoActivity"
             android:label="Your Venue" />
