Add admin games activity
To display games created by the current user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:name=".activities.TeamInfoActivity"
             android:label="Team info" />
 
+          <activity
+            android:name=".activities.AdminGamesActivity"
+            android:label="Your Games" />
+
         <activity
             android:name=".activities.VenueInfoActivity"
             android:label="Your Venue" />
