edit profile complete but confirm button not working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MapActivity"></activity>
+        <activity android:name=".activities.EditPlayerInfoActivity"></activity>
     </application>
 
 </manifest>
