--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     //google map
     compile 'com.google.android.gms:play-services-maps:11.8.0'
 
+    // for cardView support
+    compile 'com.android.support:cardview-v7:26.1.0'
+
 }
