--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,9 @@ dependencies {
 
     // to have a circular image for user profile
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    dependencies {
+        implementation 'com.jakewharton:butterknife:8.8.1'
+        annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    }
 }
