--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,11 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
 
     // google map
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'com.google.android.gms:play-services-maps:12.0.1'
+    compile 'com.google.android.gms:play-services-places:12.0.1'
+    compile 'com.google.android.gms:play-services-location:12.0.1'
+    compile 'com.google.android.gms:play-services-nearby:12.0.1'
+
 
     // for cardView support
     compile 'com.android.support:cardview-v7:26.1.0'
