--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:clearTaskOnLaunch="true"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,11 +30,16 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" />
+
+
         <activity android:name=".activities.RegistrationActivity" />
+
         <activity android:name=".activities.LoginActivity" />
+
         <activity
             android:name=".activities.CreateGameActivity"
             android:label="Eleos" />
+
         <activity
             android:name=".activities.CreateTeamActivity"
             android:label="Eleos" />
@@ -60,12 +67,14 @@
         <activity
             android:name=".activities.VenueInfoActivity"
             android:label="Your Venue" />
+
         <activity android:name=".activities.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".activities.MapActivity" />
         <activity android:name=".activities.RequestsActivity" />
